// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridItem /> set the "id" prop on the Dom element 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id="hasId"
  />
</div>
`;

exports[`<GridItem /> spread the "attrs" prop on the Dom element 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
    tabIndex="-1"
  />
</div>
`;

exports[`<GridItem /> styles apply correct default rule styles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j htz-k htz-l htz-m htz-n htz-o htz-p htz-q"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct default rule styles 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:0}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{position:relative}
.htz-i:after{background-color:#CCC}
.htz-j:after{content:\\"\\"}
.htz-k:after{height:100%}
.htz-l:after{left:0}
.htz-m:after{position:absolute}
.htz-n:after{top:0}
.htz-o:after{transform:translateX(0px)}
.htz-p:after{width:1px}
.htz-q{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct gutter styles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct gutter styles 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:0}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:4rem}
.htz-g{padding-right:4rem}
.htz-h{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct offset styles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct offset styles 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:0}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{margin-right:25%}
.htz-i{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct rule styles when rule color is a string 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j htz-k htz-l htz-m htz-n htz-o htz-p htz-q"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct rule styles when rule color is a string 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:0}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{position:relative}
.htz-i:after{background-color:#000}
.htz-j:after{content:\\"\\"}
.htz-k:after{height:100%}
.htz-l:after{left:0}
.htz-m:after{position:absolute}
.htz-n:after{top:0}
.htz-o:after{transform:translateX(-1px)}
.htz-p:after{width:2px}
.htz-q{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is even 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j htz-k htz-l htz-m htz-n htz-o htz-p htz-q"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is even 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:0}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{position:relative}
.htz-i:after{background-color:#0B7EB5}
.htz-j:after{content:\\"\\"}
.htz-k:after{height:100%}
.htz-l:after{left:0}
.htz-m:after{position:absolute}
.htz-n:after{top:0}
.htz-o:after{transform:translateX(-1px)}
.htz-p:after{width:2px}
.htz-q{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is odd 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j htz-k htz-l htz-m htz-n htz-o htz-p htz-q"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is odd 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:0}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{position:relative}
.htz-i:after{background-color:#0B7EB5}
.htz-j:after{content:\\"\\"}
.htz-k:after{height:100%}
.htz-l:after{left:0}
.htz-m:after{position:absolute}
.htz-n:after{top:0}
.htz-o:after{transform:translateX(-2px)}
.htz-p:after{width:5px}
.htz-q{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct width styles (fixed width) 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct width styles (fixed width) 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:20rem}
.htz-c{flex-grow:0}
.htz-d{flex-shrink:0}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{max-width:20rem}
.htz-i{-webkit-box-flex:0}"
`;

exports[`<GridItem /> styles apply correct width styles (relative width) 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct width styles (relative width) 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:25%}
.htz-c{flex-grow:0}
.htz-d{flex-shrink:0}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{max-width:25%}
.htz-i{-webkit-box-flex:0}"
`;

exports[`<GridItem /> styles create correct default styels 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles create correct default styels 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:0}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles set misc styles correctly 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles set misc styles correctly 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:0}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{background-color:red}
.htz-i{-webkit-box-flex:1}"
`;
